# gazelle-bug

./: README.md
broken/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-gazelle-bug  bazel-out  bazel-testlogs
fixed/: BUILD.bazel  README.md  WORKSPACE  main.go
fixed/patches/: gazelle-files-io_k8s_api.patch  gazelle-files-io_k8s_apimachinery.patch
